progress on part 2 q1